# 1.8.0

## Enhancements

### Certificates

 * Improving error handling when [Get-Certificate](http://get-carbon.org/help/Get-Certificate.html) fails to load a certificate from a file. Original exception now part of error record.
 * [Remove-SslCertificateBinding](http://get-carbon.org/help/Remove-SslCertificateBinding.html) now writes messages with `Write-Verbose` instead of `Write-Host`. Improved error handling.
 * [Set-SslCertificateBinding](http://get-carbon.org/help/Set-SslCertificateBinding.html) now writes messages with `Write-Verbose` instead of `Write-Host`. Improved error handling.

### COM

 * [Grant-ComPermission](http://get-carbon.org/help/Grant-ComPermission.html) now writes messages with `Write-Verbose` instead of `Write-Host`.
 * [Revoke-ComPermission](http://get-carbon.org/help/Revoke-ComPermission.html) now writes messages with `Write-Verbose` instead of `Write-Host`.

### File System

 * [Disable-NtfsCompression](http://get-carbon.org/help/Disable-NtfsCompression.html) no longer writes messages with `Write-Host`. Improved error handling.
 * [Enable-NtfsCompression](http://get-carbon.org/help/Enable-NtfsCompression.html) no longer writes messages with `Write-Host`. Improved error handling.
 * [New-Junction](http://get-carbon.org/help/New-Junction.html) no longer writes message with `Write-Host`.
 * [Remove-Junction](http://get-carbon.org/help/Remove-Junction.html) no longer writes message with `Write-Host`.

### Firewall

 * [Disable-FirewallStatefulFtp](http://get-carbon.org/help/Disable-FirewallStatefulFtp.html) no longer writes messages with `Write-Host`. Improved error handling.
 * [Enable-FirewallStatefulFtp](http://get-carbon.org/help/Enable-FirewallStatefulFtp.html) no longer writes message with `Write-Host`.

### Hosts File

 * [Reset-HostsFile](http://get-carbon.org/help/Reset-HostsFile.html) now writes messages with `Write-Verbose` instead of `Write-Host`.

### INI
